Set `image-rendering` to `crisp-edges` to prevent blurring

--- a/src/styles/explore.scss
+++ b/src/styles/explore.scss
@@ -216,11 +216,15 @@ qc-explorer {
           font-weight: 600;
           font-size: 12.5px;
         }
+
         img {
-          object-fit: contain;
           width: 100%;
           height: 100%;
+
           background-color: white;
+
+          object-fit: contain;
+          image-rendering: crisp-edges;
         }
       }
     }
