--- a/src/styles/zoom.scss
+++ b/src/styles/zoom.scss
@@ -18,7 +18,9 @@ qc-zoom {
     img {
       width: 100%;
       height: 100%;
+
       object-fit: cover;
+      image-rendering: crisp-edges;
     }
   }
 
